# Wolf3d

./: ._skybox.xpm  ._space.xpm  CMakeLists.txt  Makefile  README.md  Wolf3d  findRay.c  main.c  putColumn.c  putPixel.c  rayCasting.c  space.xpm  wolf3d.h
src/: buttons.c  createMap.c  create_color.c  create_image.c  create_map.c  create_win.c  create_xpm.c  findRay.c  for_func.c  integrate_color.c  main.c  putColumn.c  putPixel.c  put_pixel.c  rayCasting.c  ray_casting.c  rotate.c  walls_color.c
src/xpm/: ._42.xpm  ._space1_2560x1440.XPM  ._space2_3000x1500.XPM  ._space3_2560x1600.XPM  42.xpm  skybox.xpm
